# MCDR-Plugins

./: .gitignore  .gitmodules  .readthedocs.yml  README.md  create.ps1  pack.ps1  pyproject.toml
.github/: FUNDING.yml  branch-ruleset-config.yml
.github/workflows/: branch-protection.yml  feature-branch-protection.yml  pr-checks.yml  tag-dispatch.yml
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/kill_server/: events.rst  index.rst  readme.rst
docs/source/mcdrpost/: custom_handler.rst  index.rst  readme.rst
scripts/: create.ps1  download.ps1  pack.ps1  start.ps1
src/DevelopHandler/: README.md  mcdreforged.plugin.json
src/DevelopHandler/develop_handler/: __init__.py
src/KillServer/: README.md  mcdreforged.plugin.json  requirements.txt
src/KillServer/kill_server/: __init__.py  config.py  entry.py  events.py  handler_storage.py
src/MCDR_HibernateR-1.0.3-Changed/hibernate_r_changed/: __init__.py
src/MCDRpost/: CHANGELOG.md  README.md  custom_handler.md  mcdreforged.plugin.json  requirements.txt  todos.md
src/MCDRpost-migration/: README.md  migration.py
src/MCDRpost/demo/: config.yml  orders.json
src/MCDRpost/lang/: en_us.yml  zh_cn.yml
src/MCDRpost/mcdrpost/: __init__.py  configuration.py  constants.py  coordinator.py  deprecations.py  entry.py  environment.py  order_data.py
src/StartStopHelper-v0.1.0/: mcdreforged.plugin.json
src/StartStopHelper-v0.1.0/start_stop_helper_r_changed/: __init__.py
src/model/: README.md  mcdreforged.plugin.json
src/model/model/: __init__.py  command.py  configuration.py  plotter.py
test/: config.yml
test/config/mcdrpost/: config.yml  orders.json
test/server/: eula.txt  fabric-server-launcher.properties  server.properties
tests/KillServer/: test_dowhen.py
tests/MCDRpost/: test_minecraft_version.py  test_version.py
tests/MCDRpost-migration/: debug_item_parsing.py  detailed_debug.py  final_test.py  run_test.bat  simple_test.py  test_enhanced_nbt_parsing.py  test_fix.py  test_full_item_parsing.py  test_logger.py  test_nbt_fix.py  test_nbt_parsing.py  verify_fix.py
(+67 files in other folders)
