[project]
name = "mcdr-plugins"
version = "0.1.0"
description = "My MCDR Plugins"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcdreforged>=2.15.0",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
minecraft-data-api = [
    "hjson>=3.1.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
