[project]
name = "mcdr-plugins"
version = "0.1.0"
description = "My MCDR Plugins"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "mcdreforged>=2.15.0",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
minecraft-data-api = [
    "hjson>=3.1.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.mypy]
files = [
    "src/",
]

[[tool.mypy.overrides]]
module = [
    "mcdreforged.*",
    "mcdreforged",
    "mcdreforged.api.*",
    "packaging",
    "minecraft_data_api",
]
ignore_missing_imports = true
