[project]
name = "mcdr-plugins"
version = "0.1.0"
description = "My MCDR Plugins"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcdreforged>=2.15.7",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
minecraft-data-api = [
    "hjson>=3.1.0",
]
mcdrpost = [
    "pydantic>=2.12.5",
]
kill-server = [
    "dowhen>=0.1.0",
]
docs = [
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2025.12.21.14",
    "sphinx-prompt>=1.10.2",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-asciinema>=0.4.3",
    "sphinxcontrib-mermaid>=2.0.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.mypy]
files = [
    "src/",
]

[[tool.mypy.overrides]]
module = [
    "mcdreforged.*",
    "mcdreforged",
    "mcdreforged.api.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "packaging",
    "pydantic",
]
ignore_missing_imports = true
